# Azure-Credit-Burner

./: .env.sample  .gitignore  .mise.toml  Cargo.toml  README.md  config.json
llm/: README.md  mod.rs
llm/categories/: architecture.json  mod.rs  performance.json  security.json
llm/prompts/: mod.rs
llm/schemas/: github_response.rs  mod.rs  openai_response.rs
llm/system_prompts/: architecture.md  code_review.md
llm/templates/: repo_analysis.md
src/: llm.rs  main.rs
src/llm/: categories.rs  prompts.rs  schemas.rs
