[package]
name = "deep-dive-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
base64 = "0.21"
log = "0.4"
simple_logger = "4.2"
clap = { version = "4.3", features = ["derive", "env"] }
dotenv = "0.15.0"
walkdir = "2.3"
ignore = "0.4"
