[package]
name = "azure-credit-burner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = "0.4.26"
walkdir = "2.3.3"
ignore = "0.4.20"
base64 = "0.21.2"
log = "0.4.19"
simple_logger = "4.2.0"
futures = "0.3.28"
regex = "1.9.0"
